2013-09-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* spc_util.c: This file is identical for dvipdfmx and xdvipdfmx,
	now part of libutil.a.

2013-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* epdf.c (add_stream_flate): Use z_const.
	* pdfobj.c (pdf_add_stream_flate): Use z_const.

2013-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.c (show_usage): Adapt to modified program (stdin).
	* xdvipdfm-psz.test: Fixed a typo (found by Mojca Miklavec).

2013-08-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: pdf_filename should not be NULL to compare it with
	a string.

2013-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.[ch]: Declare and define 'char *my_name' as
	"dvipdfmx" or "xdvipdfmx" and use it instead of PROGNAME.
	* pdfdoc.c, pdfencrypt.c: Use my_name instead of PACKAGE.

	* dvipdfmx.c, pdfobj.c: Use option '-o -' for output to stdout.

	* dvipdfmx.c, dvi.c: Allow dvipdfmx to read from stdin.

	* pdfobj.c (write_dict): Drop '\n' saving a few kb.

	* pdfcolor.[ch], pdfdev.c, pdfdraw.[ch], spc_pdfm.c: Always use
	dvipdfmx type color handling.

	* agl.c, cmap_write.c, dpxutil.c, jpegimage.c, otl_conf.c,
	pdfcolor.c, pdfresource.c, pngimage.c, pst.c, pst_obj.c,
	spc_misc.c, tfm.c, vf.c, xbb.c: These files are identical for
	dvipdfmx and xdvipdfmx, now part of libutil.a.

	* configure.ac: Define PACKAGE again via AC_INIT.
	* dpxfile.c: Use "dvipdfmx" for kpse_reset_program_name().

	* (x)dvipdfm-psz.test: Test (x)dvipdfmx with stdin and stdout.

2013-08-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c: Bug fix: handle papersize specials, suggested by Akira
	(from Hironori Kitagawa <h_kitagawa2001@yahoo.co.jp>).

	* (x)dvipdfm-psz.test: Additional tests with papersize specials.
	* tests/paper.{dvi,tex}: Additional test input files.
	* Makefile.am: Adapted.

	* *.test: Sanitize environment variables (from Akira).

2013-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>
